added a working program to auto generate api request sdk from the swagger ui file
